remove package bbm

--- a/applied_stats_2023.tex
+++ b/applied_stats_2023.tex
@@ -1,6 +1,6 @@
 \documentclass[12pt]{article}
 
-\usepackage{amsmath, mathrsfs, amssymb, amsthm, fullpage, graphicx, mathtools, bbm}
+\usepackage{amsmath, mathrsfs, amssymb, amsthm, fullpage, graphicx, mathtools}
 \usepackage{graphicx}
 \usepackage{verbatim}
 \usepackage{caption}
