--- a/isaac_commands.tex
+++ b/isaac_commands.tex
@@ -9,7 +9,7 @@
 \newcommand{\mmn}[0]{\mathbb{N}}
 \newcommand{\mmq}[0]{\mathbb{Q}}
 \newcommand{\mmz}[0]{\mathbb{Z}}
-\newcommand{\bone}[0]{\mathbbm{1}}
+\newcommand{\bone}[0]{\mathbf{1}}
 
 \newcommand{\mcf}[0]{\mathcal{F}}
 \newcommand{\mcg}[0]{\mathcal{G}}
