--- a/applied_stats_2023.tex
+++ b/applied_stats_2023.tex
@@ -102,7 +102,7 @@
 \newcommand{\colour}[1]{\color{#1}}
 \input{isaac_commands.tex}
 
-\title{Applied Statistics Qualifying Exams Coaching}
+\title{Qualifying Exam Coaching}
 \author{Michael Howes\footnote{With lots of content credit given to previous applied quals coaches}}
 \date{Summer 2023}
 
