--- a/topics/PCA.tex
+++ b/topics/PCA.tex
@@ -170,7 +170,7 @@ where $k \le p$. The variables $Z_i$ are unobserved, and we observe $\widetilde{
 where $R\in \reals^{k \times k}$ is arbitrary matrix with $R^\top R=I_k$. The parameters $W$ are thus unidentifiable, but we can still estimate the span of $W$ with the first $k$ principal component directions. For more details including a Bayesian approach to probabilistic PCA, see Scott's lecture notes \url{https://github.com/slinderman/stats305c/blob/spring2023/slides/lecture05-continuous_lvms.pdf}.
 
 
-\subsection{Sparse principal component analysis}
+\subsection*{Sparse principal component analysis}
 
 These notes are from the previous iterations of coaching. Sparse PCA is on a number of past qualifying exams, but I think it would be out of scope for you year.
 
