update section heading on applied_2022

--- a/solutions/applied_2022.tex
+++ b/solutions/applied_2022.tex
@@ -1,4 +1,4 @@
-\section{Applied 2022\footnote{Michael Howes}}
+\section{Applied 2022: Solution\footnote{Michael Howes}}
 
 \subsection*{Problem 1: R-squared and PCA}
 
